<resources>

    <string name="app_name">Got2Go</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">dAsKIKsrVFkfbSuu7hH3E9DcyUQv8HifPHnG74k7</string>
    <string name="back4app_client_key">6SaJhhC5X1OaKOu9EU9cXSnJGH9gxwp0mtTle5gl</string>
    <string name="login">LOGIN</string>
    <string name="username">username</string>
    <string name="sign_up">SIGN UP</string>
    <string name="hf_filler">Write a Review on Location</string>
    <string name="scan_item">Submit</string>
    <string name="input_manually">MANUAL INPUT</string>
    <string name="check">CHECK</string>
    <string name="check_to_see_if_your_item_can_be_recycled">Check to see if this material can be recycled!</string>
    <string name="item_name_i_e_water_bottle">material name (i.e water bottle)</string>
    <string name="what_item_is_made_of_i_e_plastic">what material is made of (i.e. plastic)</string>
    <string name="password">password</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="wiki">Wiki</string>
    <string name="profile">Profile</string>
    <string name="paper">TextView</string>
    <string name="waste_categories">Waste Categories</string>
    <string name="prompt">Take a picture of the material you wish to recycle.</string>
    <string name="map">Map</string>
    <string name="bookmark">Bookmark</string>
    <string name="review">Review</string>
    <string name="create_account">Create Account</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="zoom_in">Zoom In</string>
    <string name="sort">Sort</string>
    <string name="search_location">Search Location</string>
    <string name="add_restroom_button">Add Restroom Button</string>
    <string name="restroom_name">Choose a location name</string>
    <string name="restroom_status">open</string>
    <string name="restroom_address">Enter the street address</string>
    <string name="add_restroom_submit">Submit</string>
    <string name="add_restroom_cancel">Cancel</string>
    <string name="add_restroom_dialog_title">Create a new restroom location</string>
    <string name="got2go_logo">The Got2Go app logo</string>


</resources>
