<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/mapContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.mapbox.maps.MapView
            xmlns:mapbox="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            mapbox:mapbox_locationComponentEnabled="true"
            tools:context=".fragments.MapFragment"
            />
    </FrameLayout>
    <EditText
        android:id="@+id/searchBar"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/search_location"
        android:inputType="text"
        android:autofillHints="" />
    <Spinner
        android:id="@+id/filterSpinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/searchBar"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/Pink" />
    <Button
        android:id="@+id/sortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        android:layout_alignEnd="@id/searchBar"
        android:layout_alignBottom="@id/filterSpinner"
        android:fontFamily="@font/poppins_medium" />
    <ImageView
        android:id="@+id/icon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />
    <Button
        android:id="@+id/zoomInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_in"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@id/sortButton"
        android:layout_marginStart="16dp" />
    <Button
        android:id="@+id/zoomOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_out"
        android:layout_below="@id/zoomInButton"
        android:layout_alignStart="@id/zoomInButton"
        android:layout_marginTop="8dp" />
    <ImageButton
        android:id="@+id/addRestroomButton"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/zoomOutButton"
        android:layout_alignParentEnd="true"
        android:src="@drawable/add_button"
        android:contentDescription="@string/add_restroom_button" />

</RelativeLayout>
<!--    mapbox:mapbox_cameraTargetLat="33.8750"-->
<!--    mapbox:mapbox_cameraTargetLng="-117.8845"-->